--- a/styles.css
+++ b/styles.css
@@ -2956,10 +2956,11 @@ body.ttt-active nav #versionDisplay {
     gap: 0.75rem;
 }
 
-.ttt-status-card.ttt-win .ttt-status-front,
-.ttt-status-card.ttt-win .ttt-status-back {
+.ttt-status-card.ttt-win-order .ttt-status-front,
+.ttt-status-card.ttt-win-order .ttt-status-back {
     flex-direction: row-reverse;
 }
+
 
 .ttt-status-back {
     transform: rotateX(180deg);
